--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "import os\n",
     "\n",
     "# Import API key\n",
-    "from api_keys import g_key"
+    "from config import g_key"
    ]
   },
   {
@@ -41,11 +41,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>City ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>{0}</td>\n",
+       "      <td>Crib Point</td>\n",
+       "      <td>-38.3500</td>\n",
+       "      <td>145.2000</td>\n",
+       "      <td>86.0</td>\n",
+       "      <td>48</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>2021-02-10 02:29:49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>{1}</td>\n",
+       "      <td>Barrow</td>\n",
+       "      <td>71.2906</td>\n",
+       "      <td>-156.7887</td>\n",
+       "      <td>-22.0</td>\n",
+       "      <td>69</td>\n",
+       "      <td>1</td>\n",
+       "      <td>17.27</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2021-02-10 02:24:57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>{2}</td>\n",
+       "      <td>Lata</td>\n",
+       "      <td>40.1629</td>\n",
+       "      <td>-8.3327</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>93</td>\n",
+       "      <td>100</td>\n",
+       "      <td>7.00</td>\n",
+       "      <td>PT</td>\n",
+       "      <td>2021-02-10 02:29:49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>{3}</td>\n",
+       "      <td>Progreso</td>\n",
+       "      <td>21.2833</td>\n",
+       "      <td>-89.6667</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>78</td>\n",
+       "      <td>40</td>\n",
+       "      <td>14.97</td>\n",
+       "      <td>MX</td>\n",
+       "      <td>2021-02-10 02:29:49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>{5}</td>\n",
+       "      <td>Ushuaia</td>\n",
+       "      <td>-54.8000</td>\n",
+       "      <td>-68.3000</td>\n",
+       "      <td>62.6</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.61</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>2021-02-10 02:29:50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0 City ID        City      Lat       Lng  Max Temp  Humidity  \\\n",
+       "0           0     {0}  Crib Point -38.3500  145.2000      86.0        48   \n",
+       "1           1     {1}      Barrow  71.2906 -156.7887     -22.0        69   \n",
+       "2           2     {2}        Lata  40.1629   -8.3327      55.0        93   \n",
+       "3           3     {3}    Progreso  21.2833  -89.6667      77.0        78   \n",
+       "4           4     {5}     Ushuaia -54.8000  -68.3000      62.6        72   \n",
+       "\n",
+       "   Cloudiness  Wind Speed Country                 Date  \n",
+       "0           0        4.23      AU  2021-02-10 02:29:49  \n",
+       "1           1       17.27      US  2021-02-10 02:24:57  \n",
+       "2         100        7.00      PT  2021-02-10 02:29:49  \n",
+       "3          40       14.97      MX  2021-02-10 02:29:49  \n",
+       "4           0        4.61      AR  2021-02-10 02:29:50  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "# Load in cities data from WeatherPy\n",
+    "cities_data = pd.read_csv(\"../output_data/cities.csv\")\n",
+    "cities_df = pd.DataFrame(cities_data)\n",
+    "cities_df.head()"
    ]
   },
   {
@@ -60,17 +193,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Configure gmaps\n",
+    "gmaps.configure(api_key = g_key)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create the locations and their weights based on humidity\n",
+    "locations = cities_df[[\"Lat\", \"Lng\"]].astype(float)\n",
+    "city_weights = cities_df[\"Humidity\"].astype(float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3ad439c223aa42e3aca464dd295a9e41",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Create a preliminary heatmap\n",
+    "fig = gmaps.figure(center=(30,20), zoom_level=1.5)\n",
+    "\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights=city_weights, dissipating=False, max_intensity=city_weights.max(),\n",
+    "                                point_radius=1)\n",
+    "\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,9 +330,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
